5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1613_1801.log
== SUBMITION (2019-03-31 16:52:08) 
-- CODE:
objeto=int(input("abra + digite o nome"))
repeticoes=int(input("digite o numero"))
print(objeto,repeticoes)

-- EXECUTION TIME:
0.205824
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 1, in <module>
    objeto=int(input())
ValueError: invalid literal for int() with base 10: 'livro'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:52:14) 
-- CODE:
objeto=int(input("abra + digite o nome"))
repeticoes=int(input("digite o numero"))
print(objeto,repeticoes)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    objeto=int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:53:21) 
-- CODE:
objeto=input("abra + digite o nome")
repeticoes=input("digite o numero")
print(objeto,repeticoes)

-- EXECUTION TIME:
0.177616
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livro 8
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carro 2
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:54:05) 
-- CODE:
objeto=input("abra + digite o nome")
repeticoes=input("digite o numero")
print(objeto+,repeticoes*)

-- EXECUTION TIME:
0.157831
-- ERROR:
  File "/home/codebench/codes/1613/1801/main.py", line 3
    print(objeto+,repeticoes*)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:54:44) 
-- CODE:
objeto=input("abra + digite o nome+")
repeticoes=input("digite o numero*")
print(objeto,repeticoes)

-- EXECUTION TIME:
0.162248
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livro 8
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carro 2
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:54:53) 
-- CODE:
objeto=input("abra + digite o nome+")
repeticoes=input("digite o numero*")
print(objeto,repeticoes)

-- OUTPUT:
livro 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:55:21) 
-- CODE:
objeto=input("abra + digite o nome+")
repeticoes=input("digite o numero*")
print(objeto,repeticoes)

-- EXECUTION TIME:
0.209373
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livro 8
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carro 2
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:59:05) 
-- CODE:
objeto=input("abra + digite o nome"+)
repeticoes=input("digite o numero"*)
print(objeto,repeticoes)

-- EXECUTION TIME:
0.192619
-- ERROR:
  File "/home/codebench/codes/1613/1801/main.py", line 1
    objeto=input("abra + digite o nome"+)
                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
